<resources>
    <string name="app_name">UI_widgets</string>
    <string name="searchbyname">Search By name</string>
    <string name="searchbycontain">Search By Contain</string>
    <string name="action_search">Search by name</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
         <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>


    <string name="hello_world">hello world</string>
    <string name="textview">textview</string>
    <string name="sort_by_name">sort by name</string>
    <string name="sort_by_rating">sort by rating</string>
    <string name="sort_by_birth">sort by birth</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_settings">Settings</string>

    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo."</string>

    <string name="lake_discription">
        Lake Tahoe is a large freshwater lake in the Sierra Nevada of the United States. At a surface
        elevation of 6,225 ft (1,897 m), it straddles the border between California and Nevada, west
        of Carson City. Lake Tahoe is the largest alpine lake in North America. Its depth is
        1,645 ft (501 m), making it the second deepest in the United States after Crater Lake
        (1,945 ft (593 m)). Additionally, Lake Tahoe is the sixth largest lake by volume in the
        United States at 122,160,280 acre·ft (150,682,490 dam3), behind the five Great Lakes.

The lake was formed about 2 million years ago and is a part of the Lake Tahoe Basin with the modern
        lake being shaped during the ice ages. It is known for the clarity of its water and the
        panorama of surrounding mountains on all sides. The area surrounding the lake is also
        referred to as Lake Tahoe, or simply Tahoe. More than 75 percent of the lakes watershed is
        national forest land, comprising the Lake Tahoe Basin Management Unit of the United States
        Forest Service.
    </string>
    <string name="lake_tahoe_image">Image of Lake Tahoe</string>
    <string name="lake_tahoe_title">Lake Tahoe</string>
    <string name="android_button">Android Button</string>
    <string name="centering_views">Centering Views</string>
    <string name="centered_button">Centered Button</string>
    <string name="basic_arrange">Basic Arrange</string>
    <string name="advanced_arrangement">Advanced Arrangement</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="basic_chains">Basic Chains</string>
    <string name="constraintset">ConstraintSet</string>
    <string name="advanced_chains">Advanced Chains</string>
    <string name="guidelines">Guidelines</string>
    <string name="button_1">Button 1</string>
    <string name="button_text">Button 1234</string>
    <string name="button_text_12">Button 12</string>
    <string name="arrange">Arrange</string>
    <string name="button">Button</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="advanced_arrange">Advanced Arrange</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="zero_point_zero">0.0</string>
    <string name="dot">.</string>
    <string name="centering">Basic Centering</string>
    <string name="big_android_icon">Big Android Icon</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="subtract">−</string>


    <string name="BackDropBottomSheetBehavior">com.son.jawad.ui_widgets.Behviors.lib.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.son.jawad.ui_widgets.Behviors.lib.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.son.jawad.ui_widgets.Behviors.lib.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.son.jawad.ui_widgets.Behviors.lib.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.son.jawad.ui_widgets.Behviors.lib.ScrollingAppBarLayoutBehavior</string>
    <string name="button_share">Share</string>
    <string name="button_extract">extract</string>
    <string name="button_Open">Open</string>
    <string name="button_Link">Link</string>
    <string name="button_Uninstall">Uninstall</string>



    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="combo">Combo</string>
    <string name="fade">fade</string>
    <string name="move">move</string>
    <string name="scale">scale</string>
    <string name="spin">spin</string>
    <string name="color">color</string>
    <string name="padding">padding</string>
    <string name="ripple">ripple</string>


</resources>
